完成关注和粉丝页面，并初步测试了关注和取消关注操作
因为这一次写代码，改动的东西太多，走的太远，所以先做一次提交。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -48,7 +48,7 @@ require(["dojo/ready",
 		dom.byId("my_exer_count").innerHTML = userInfo.exerciseCount;
 		// 在顶部用户信息区域显示
 		var topProfileImage = dom.byId("topProfileImage");
-		topProfileImage.src = userInfo.smallImageUrl || "/drip/resources/images/profile_50_50.gif";;
+		topProfileImage.src = userInfo.smallImageUrl || "/drip/resources/images/profile_50_50.gif";
 		topProfileImage.alt = displayName;
 		dom.byId("topUserName").innerHTML = displayName;
 		dom.byId("top_user_link").href = "#";//TODO：跳转
