--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/dashboard.html
@@ -22,7 +22,7 @@ require(["dojo/ready",
          "dojo/parser",
          "dojo/request/xhr",
          "dijit/registry",
-         "drip/userSession",
+         "drip/user",
          "drip/Activity",
          "dojo/domReady!"],function(
         		 ready,
@@ -31,15 +31,15 @@ require(["dojo/ready",
         		 parser,
         		 xhr,
         		 registry,
-        		 userSession){
+        		 user){
 	// 加载左侧栏目中的数据，因为左侧没有用dijit部件，所无需放在ready方法中
-	userSession.getLoggedUserInfo().then(function(userInfo){
+	user.getLoggedUserInfo().then(function(userInfo){
 		console.log("登录用户信息:", userInfo);
 		// 在右侧用户信息区域显示
 		var profileImg = dom.byId("profileImage");
 		var displayName = userInfo.nickName;
 		profileImg.alt = displayName;
-		profileImg.src = userInfo.largeImageUrl;
+		profileImg.src = userInfo.largeImageUrl || "/drip/resources/images/profile_180_180.gif";
 		dom.byId("userName").innerHTML = displayName;
 		dom.byId("follow_count").innerHTML = userInfo.followCount;
 		dom.byId("fan_count").innerHTML = userInfo.fanCount;
@@ -48,18 +48,19 @@ require(["dojo/ready",
 		dom.byId("my_exer_count").innerHTML = userInfo.exerciseCount;
 		// 在顶部用户信息区域显示
 		var topProfileImage = dom.byId("topProfileImage");
-		topProfileImage.src = userInfo.smallImageUrl;
+		topProfileImage.src = userInfo.smallImageUrl || "/drip/resources/images/profile_50_50.gif";
 		topProfileImage.alt = displayName;
 		dom.byId("topUserName").innerHTML = displayName;
+		dom.byId("top_user_link").href = "#";//TODO：跳转
 		
 		
 		// 在关注和粉丝的链接上加上登录者的用户标识
 		// 切记：出现在rest链接中的，只能是本地用户标识，而不是第三方网站或映射用户标识
-		dom.byId("following_link").href = "/following/" + userInfo.id;
-		dom.byId("follower_link").href = "/follower/" + userInfo.id;
+		dom.byId("following_link").href = "/following/" + userInfo.digitalId;
+		dom.byId("follower_link").href = "/followers/" + userInfo.digitalId;
 	});
 	
-	on(dom.byId("logout"),"click",userSession.logout);
+	on(dom.byId("logout"),"click",user.logout);
 	
 	parser.parse();
 	
@@ -128,7 +129,7 @@ function sendRenrenRequest(){
 			</ul>
 			<ul class="drip_user_links">
 				<li>
-					<a href="#" class="drip_name">
+					<a href="#" id="top_user_link" class="drip_name">
 						<img width="20px" height="20px" id="topProfileImage">
 						<span id="topUserName"></span>
 					</a>
