--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/exercises/list.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/exercises/list.html
@@ -7,7 +7,7 @@
 <link type="text/css" rel="stylesheet" href="/drip/resources/main.css" />
 <link rel="stylesheet" type="text/css" href="/drip/resources/index.css" />
 
-<title>高数题库 · 孜孜不倦</title>
+<title>题库 · 孜孜不倦</title>
 <script type="text/javascript" 
 	data-dojo-config="
 		async:true,
