--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<meta name="keywords" content="在线学习,教育,高等数学">
+<meta name="description" content="孜孜不倦 - 免费、开放的在线学习平台，学生可在这里做题，看教学视频，与各地同学一起交流；教师和与全国优秀教师共同维护讲义，教学视频等。">
 <!-- qq -->
 <meta property="qc:admins" content="723131631212525166375" />
 <!-- sina weibo -->
