--- a/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.release/release/drip/index.html
@@ -24,7 +24,7 @@
 		<span class="drip_version">测试版</span>
 		<ul class="drip_top_nav">
 			<li><a href="/exercises">题库</a></li>
-			<li><a href="/docs">文档</a></li>
+			<!-- <li><a href="/docs">文档</a></li> -->
 			<!-- <li><a href="#">开发博客</a></li>  -->
 		</ul>
 	</div>
