--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<meta name="keywords" content="在线学习,教育,高等数学">
+<meta name="keywords" content="在线学习,教育,数学,考研">
 <meta name="description" content="孜孜不倦 - 免费、开放的在线学习平台，学生可在这里做题，看教学视频，与各地同学一起交流；教师和与全国优秀教师共同维护讲义，教学视频等。">
 <!-- qq -->
 <meta property="qc:admins" content="723131631212525166375" />
@@ -33,7 +33,8 @@
 	<div class="drip_welcome_area clearfix">
 		<div class="container">
 			<div class="drip_home_signup">
-				<p class="drip_note">不用注册，直接用以下帐号登录</p>
+				<!-- <p class="drip_note">不用注册，直接用以下帐号登录</p>-->
+				<p class="drip_note">不用注册，直接用人人帐号登录</p>
 				<!-- 
 				<div>
 					<a href="/login/qq">
@@ -45,6 +46,7 @@
 					<a href="/login/renren">
 						<img alt="用人人帐号登录" src="drip/resources/images/renren_login_white_234_48.png"></img>
 					</a>
+					<p class="drip_note_invite_label">邀请<span style="color:blue">人人</span>上考研的同学一起学习</p>
 				</div>
 				<!-- 
 				<div>
@@ -55,53 +57,23 @@
 				 -->
 			</div>
 			<div class="drip_heading">
-				<p>一起交流学习心得</p>
-				<p class="drip_heading_indent">共同优化教育资源</p>
+				<p>全国考研族</p>
+				<p class="drip_heading_indent">都在<span style="color:#00a300">孜孜不倦</span>学习</p>
 			</div>
-			<p class="drip_subheading">
-				已支持学习数学。
-				<!-- 在这里，大家一起出题、做题、编写讲义、分享教学视频 
-				不论年龄大小，不论身处何处，大家一起出题、做题、讨论。			
-				<br/>现已开放<strong>高等数学</strong>专区
-				营造一个开放、优质的学习环境，<br/>
-				欢迎同学们来这里一起学习，拓宽视野，共同进步。-->
-			</p>
 		</div>
 	</div>
 	<!-- 待定稿 -->
 	<div class="container">
-		<div class="site_introduces">
-			<div class="site_introduce">
-				<!-- <img class="site_introduce_illustration"> -->
-				<h3>免费的开放学习平台</h3>
-				<p>无论你是谁，来自哪里，都可与全世界最优秀的人一起学习，享用高质量的教育资源，当然也离不开您在这里贡献的一点一滴。</p>
-			</div>
-			<div class="site_introduce">
-				<!-- <img class="site_introduce_illustration"> -->
-				<h3>在这里，我能做什么</h3>
-				<p>与大家一起维护习题，解答习题，一起编写和翻译优秀的文档。关注好友学习动态，优化和评价好友做的作业。</p>
-			</div>
-			<div class="site_introduce">
-				<!-- <img class="site_introduce_illustration"> -->
-				<h3>快速录入数学公式</h3>
-				<p>本网站提供首个纯键盘的快速数学公式编辑器，<strong>只要会读数学符号就会写数学公式</strong>。请参考<a href="#">数学编辑器帮助手册</a>。</p>
-			</div>
-		</div>
-		<!-- 网站帮助，介绍完站支持哪些操作  -->
+		<!-- 技能训练入口 -->
+		<p>Q：来这里我可以做什么？</p>
+		<p>A：与各高校考研的同学一起做习题。</p>
+		
+		<p>Q：我需要先学哪些技能？</p>
+		<p>A：三步学会快速输入数学公式(<a href="#">开始学习</a>)。</p><!-- 点击时，弹出一个练习框 -->
 	</div>
 </div>
 <div>
-	<!-- 开发日志 
-	<div class="container">
-		<div id="devInfoMessage">设计界面中</div>
-		<div id="devInfoLink">更多...</div>
-	</div>
-	-->
 </div>
-</div>
-
-<div style="font-size:20px;text-align: center;background-color: #f5f5f5;padding:20px;color:red">
-火热开发中，敬请耐心等待!
 </div>
 </body>
 </html>
