遵循“不要让我思考”的原则，修改首页内容：“Q”-->"问", "A" -->"答"

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -65,11 +65,11 @@
 	<!-- 待定稿 -->
 	<div class="container">
 		<!-- 技能训练入口 -->
-		<p style="margin-bottom: 0px">Q：来这里我可以做什么？</p>
-		<p style="margin-top: 6px">A：与各高校考研的同学一起做<span style="font-weight: bolder;">数学题</span>。</p>
+		<p style="margin-bottom: 0px">问：来这里我可以做什么？</p>
+		<p style="margin-top: 6px">答：与各高校考研的同学一起做<span style="font-weight: bolder;">数学题</span>。</p>
 		
-		<p style="margin-top: 20px;margin-bottom: 0px">Q：我需要先学哪些技能？</p>
-		<p style="margin-top: 6px">A：三步学会快速输入数学公式(<a href="#">学输公式</a>)。</p><!-- 点击时，弹出一个练习框 -->
+		<p style="margin-top: 20px;margin-bottom: 0px">问：我需要先学哪些技能？</p>
+		<p style="margin-top: 6px">答：三步学会快速输入数学公式(<a href="#">学输公式</a>)。</p><!-- 点击时，弹出一个练习框 -->
 	</div>
 </div>
 <div>
