--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/exercises/new.html
@@ -67,7 +67,7 @@ require(["dojo/ready",
 						<span id="topUserName"></span>
 					</a>
 					</li>
-					<li><a href="/exercises/new" title="录入新习题" class="drip_new_exercise">+习题</a></li>
+					<li><a href="/exercises/new" title="录入新习题" class="minibutton primary">录入习题</a></li>
 					<li><input type="button" title="退出" id="logout" value="退出" class="logout"></input></li>
 				</ul>
 			</div>
