在exercises/new.html页面使用awesome图标代替之前的图片，并删除旧的图片。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -211,10 +211,10 @@ function sendRenrenRequest(){
 						<span id="topUserName"></span>
 					</a>
 				</li>
-				<li><a href="/exercises/new" title="录入新习题" class="minibutton primary"><i class="icon-edit"></i>录入习题</a></li>
+				<li><a href="/exercises/new" title="录入新习题" class="minibutton primary"><i class="icon-edit"></i> 录入习题</a></li>
 				<li><input type="button" title="退出" id="logout" value="退出" class="logout"></input>
 				</li>
-				<li><a class="minibutton" href="#"><i class="icon-signout"></i>退出</a></li>
+				<li><a class="minibutton" href="#"><i class="icon-signout"></i> 退出</a></li>
 			</ul>
 		</div>
 	</div>
@@ -279,6 +279,8 @@ function sendRenrenRequest(){
 							 		<input value="邀请人人好友一起学习" style="width:100%; color:#00a300; padding-top: 8px; padding-bottom: 8px;
 							 		margin-top:10px; font-weight:bold;
 							 		font-size: 17px;cursor: pointer;" type="button" onclick="sendRenrenRequest();"></input>
+							 		
+							 		<a class="minibutton" href="#"><i class="icon-bullhorn icon-large"></i> 邀请人人好友一起学习</a>
 							 	</div>
 							</div>
 						</div>
