将form提交按钮和退出按钮改为使用button标签显示。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -212,9 +212,7 @@ function sendRenrenRequest(){
 					</a>
 				</li>
 				<li><a href="/exercises/new" title="录入新习题" class="minibutton primary"><i class="icon-edit"></i> 录入习题</a></li>
-				<li><input type="button" title="退出" id="logout" value="退出" class="logout"></input>
-				</li>
-				<li><a class="minibutton" href="#"><i class="icon-signout"></i> 退出</a></li>
+				<li><button class="minibutton" id="logout"><i class="icon-signout"></i> 退出</button></li>
 			</ul>
 		</div>
 	</div>
