简化首页内容，公共首页的第一版定稿。

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/index.html
@@ -24,6 +24,7 @@
 		<span class="drip_version">测试版</span>
 		<ul class="drip_top_nav">
 			<li><a href="/exercises">题库</a></li>
+			<li><a href="/help">帮助</a></li>
 			<!-- <li><a href="/docs">文档</a></li> -->
 			<!-- <li><a href="#">开发博客</a></li> -->
 		</ul>
@@ -46,7 +47,6 @@
 					<a href="/login/renren">
 						<img alt="用人人帐号登录" src="drip/resources/images/renren_login_white_234_48.png"></img>
 					</a>
-					<p class="drip_note_invite_label">邀请<span style="color:blue">人人</span>上考研的同学一起学习</p>
 				</div>
 				<!-- 
 				<div>
@@ -58,18 +58,10 @@
 			</div>
 			<div class="drip_heading">
 				<p>全国考研族</p>
-				<p class="drip_heading_indent">都在<span style="color:#00a300">孜孜不倦</span>学习</p>
+				<p>都在<span style="color:#00a300">孜孜不倦</span>学习数学</p>
+				<p class="drip_subheading" style="margin-top: 30px">邀请考研的同学，一起录入习题，解答习题。</p>
 			</div>
 		</div>
-	</div>
-	<!-- 待定稿 -->
-	<div class="container">
-		<!-- 技能训练入口 -->
-		<p style="margin-bottom: 0px">问：来这里我可以做什么？</p>
-		<p style="margin-top: 6px">答：与各高校考研的同学一起做<span style="font-weight: bolder;">数学题</span>。</p>
-		
-		<p style="margin-top: 20px;margin-bottom: 0px">问：我需要先学哪些技能？</p>
-		<p style="margin-top: 6px">答：三步学会快速输入数学公式(<a href="#">学输公式</a>)。</p><!-- 点击时，弹出一个练习框 -->
 	</div>
 </div>
 <div>
