--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -203,6 +203,7 @@ function sendRenrenRequest(){
 			<ul class="drip_top_nav">
 				<li><a href="/" class="current">首页</a></li>
 				<li><a href="/exercises">题库</a></li>
+				<li><a href="/help">帮助</a></li>
 			</ul>
 			<ul class="drip_user_links">
 				<li>
