支持查询登录用户发起的项目列表

--- a/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
+++ b/client/bundles/com.zizibujuan.drip.client.core/web/drip/dashboard.html
@@ -57,6 +57,7 @@ require(["dojo/ready",
 		// 切记：出现在rest链接中的，只能是本地用户标识，而不是第三方网站或映射用户标识
 		dom.byId("following_link").href = "/following/" + userInfo.digitalId;
 		dom.byId("follower_link").href = "/followers/" + userInfo.digitalId;
+		
 	});
 	
 	user.getLoggedUserStatistics().then(function(statistics){
@@ -141,6 +142,14 @@ require(["dojo/ready",
 		domClass.remove(myAnswer, "selected");
 	});
 	
+	
+	// 加载登录用户发起的项目列表
+	// 如果没有传递用户信息，则获取登录用户的项目列表
+	xhr.get("/projects/",{handleAs:"json"}).then(function(data){
+		console.log("projects", data);
+	}, function(error){
+		
+	});
 	
 	ready(function(){
 		/*
@@ -277,6 +286,15 @@ function sendRenrenRequest(){
 								 </div>
 							 	<div style="margin-top: 20px;">
 							 		<button class="minibutton" onclick="sendRenrenRequest();"><i class="icon-bullhorn icon-large"></i> 邀请人人好友一起学习</button>
+							 	</div>
+							 	
+							 	<div class="box box-small">
+							 		<div class="box-header">
+							 			<h3 class="box-title">我发起的项目</h3>
+							 			<div class="box-body">
+							 				<ul class="project-list" id="my_project_list"></ul>
+							 			</div>
+							 		</div>
 							 	</div>
 							</div>
 						</div>
